@@ -1,3 +1,7 @@
+2000-03-01  Larry Jones  <larry.jones@sdrc.com>
+
+	* logmsg.c (do_editor): Correct previous change.
+
 2000-02-29  Larry Jones  <larry.jones@sdrc.com>
 
 	* logmsg.c (do_editor): When reading temp file, check that message
